Minor spacing fix

--- a/code/Dilemma.Web/Content/homegrown/2-modules/_answer.less
+++ b/code/Dilemma.Web/Content/homegrown/2-modules/_answer.less
@@ -236,7 +236,7 @@
 .Answer.is-mine.is-upvoted.is-star .Answer-text:before {
   top: -10px; 
   position: relative;
-  margin-bottom: 100px;
+  margin-bottom: 120px;
 }
 .Answer.is-mine.is-upvoted.is-star .Answer-text p:first-child:before {
   top: 45px;
